; ModuleID = '/home/carl/AnghaBench/linux/tools/io_uring/extr_io_uring-cp.c_queue_prepped.c'
source_filename = "/home/carl/AnghaBench/linux/tools/io_uring/extr_io_uring-cp.c_queue_prepped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io_uring = type { i32 }
%struct.io_data = type { i32, i32, i64 }
%struct.io_uring_sqe = type { i32 }

@infd = common dso_local global i32 0, align 4
@outfd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.io_uring*, %struct.io_data*)* @queue_prepped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @queue_prepped(%struct.io_uring* %0, %struct.io_data* %1) #0 {
  %3 = alloca %struct.io_uring*, align 8
  %4 = alloca %struct.io_data*, align 8
  %5 = alloca %struct.io_uring_sqe*, align 8
  store %struct.io_uring* %0, %struct.io_uring** %3, align 8
  store %struct.io_data* %1, %struct.io_data** %4, align 8
  %6 = load %struct.io_uring*, %struct.io_uring** %3, align 8
  %7 = call %struct.io_uring_sqe* @io_uring_get_sqe(%struct.io_uring* %6)
  store %struct.io_uring_sqe* %7, %struct.io_uring_sqe** %5, align 8
  %8 = load %struct.io_uring_sqe*, %struct.io_uring_sqe** %5, align 8
  %9 = call i32 @assert(%struct.io_uring_sqe* %8)
  %10 = load %struct.io_data*, %struct.io_data** %4, align 8
  %11 = getelementptr inbounds %struct.io_data, %struct.io_data* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %2
  %15 = load %struct.io_uring_sqe*, %struct.io_uring_sqe** %5, align 8
  %16 = load i32, i32* @infd, align 4
  %17 = load %struct.io_data*, %struct.io_data** %4, align 8
  %18 = getelementptr inbounds %struct.io_data, %struct.io_data* %17, i32 0, i32 1
  %19 = load %struct.io_data*, %struct.io_data** %4, align 8
  %20 = getelementptr inbounds %struct.io_data, %struct.io_data* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @io_uring_prep_readv(%struct.io_uring_sqe* %15, i32 %16, i32* %18, i32 1, i32 %21)
  br label %32

23:                                               ; preds = %2
  %24 = load %struct.io_uring_sqe*, %struct.io_uring_sqe** %5, align 8
  %25 = load i32, i32* @outfd, align 4
  %26 = load %struct.io_data*, %struct.io_data** %4, align 8
  %27 = getelementptr inbounds %struct.io_data, %struct.io_data* %26, i32 0, i32 1
  %28 = load %struct.io_data*, %struct.io_data** %4, align 8
  %29 = getelementptr inbounds %struct.io_data, %struct.io_data* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @io_uring_prep_writev(%struct.io_uring_sqe* %24, i32 %25, i32* %27, i32 1, i32 %30)
  br label %32

32:                                               ; preds = %23, %14
  %33 = load %struct.io_uring_sqe*, %struct.io_uring_sqe** %5, align 8
  %34 = load %struct.io_data*, %struct.io_data** %4, align 8
  %35 = call i32 @io_uring_sqe_set_data(%struct.io_uring_sqe* %33, %struct.io_data* %34)
  ret void
}

declare dso_local %struct.io_uring_sqe* @io_uring_get_sqe(%struct.io_uring*) #1

declare dso_local i32 @assert(%struct.io_uring_sqe*) #1

declare dso_local i32 @io_uring_prep_readv(%struct.io_uring_sqe*, i32, i32*, i32, i32) #1

declare dso_local i32 @io_uring_prep_writev(%struct.io_uring_sqe*, i32, i32*, i32, i32) #1

declare dso_local i32 @io_uring_sqe_set_data(%struct.io_uring_sqe*, %struct.io_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
